@@ -1,3 +1,7 @@
+2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* MonoGenericClassTest.cs: New file.
+
 2009-07-30  Zoltan Varga  <vargaz@gmail.com>
 
 	* FieldInfoTest.cs: Add a test for #525733.
